--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,22 @@
 .holder {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto auto;
-  gap: 0;
+  display: flex ;
 }
-
 .item {
+  height: 150px;
+  width: 200px;
   text-align: center;
-  line-height: 50px;
-  border: 1px solid black;
+  background-color: orange;
+  line-height: 100px;
+  vertical-align: center;
+  margin-right: 15px;
 }
-
-.item-1, .item-5 {
-  grid-row: 1 / 2;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+.item-5{
+  order: -2;
 }
-
-.item-2, .item-3, .item-4 {
-  grid-row: 2 / 3;
-  width: 150px; /* ширина елементів 1 і 5 */
-}
-
 .item-1 {
-  order: 1;
+  order: -3;
 }
-
-.item-2 {
-  order: 2;
-  
-}
-
 .item-3 {
-  order: 1;
+  order: 2;  
 }
 
-.item-4 {
-  order: 4;
-}
-
-.item-5 {
-  order: 5;
-}
